--- a/css/main.css
+++ b/css/main.css
@@ -4,3 +4,18 @@ background-image: url("../img/2cakelavendar.jpg");
 background-size: cover;
 height: 100%;
 }
+.rowaboutbake{
+	background-color: beige;
+	height: 300px;
+	width: 100%;
+	top: 50%;
+	padding: 126px;
+}
+p{
+	top: 50%;
+	left: 50%;
+}
+.bakerow{
+	height:300px;
+	padding-top:100px;
+}
